src/objects/c2g__codaIntercompanyDefinition__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpintercompanydefinition</customHelpPage>
    <description>Defines the intercompany control accounts that you want to use when generating and posting  intercompany journals.</description>
    <fields>
        <fullName>c2g__DestinationDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Destination Dimension 1)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Destination Dimension 2)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Destination Dimension 3)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Intercompany Definitions</relationshipLabel>
        <relationshipName>IntercompanyDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ReceivingControlAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounts Payable GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipName>Intercompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__RelatedCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Related Company)</relationshipLabel>
        <relationshipName>IntercompanyDefinitionsRelatedCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SendingControlAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounts Receivable GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipName>Intercompany1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Source Dimension 1)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Source Dimension 2)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Source Dimension 3)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Intercompany Definition</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>c2g__RelatedCompany__c</columns>
        <columns>c2g__ReceivingControlAccount__c</columns>
        <columns>c2g__SendingControlAccount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ICD{000000}</displayFormat>
        <label>Intercompany Definition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intercompany Definitions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>